force-app/main/default/objects/ARF_Retell_Config__c/ARF_Retell_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Retell AI configuration for automated voice collection calls.</description>
    <label>ARF Retell Config</label>
</CustomObject>