force-app/main/default/objects/ARF_Retell_Config__c/fields/Agent_ID__c.field-meta.xml
<CustomField>
    <fullName>Agent_ID__c</fullName>
    <description>Retell AI Agent ID for collection calls</description>
    <label>Agent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>