force-app/main/default/objects/ARF_Retell_Config__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>Retell AI API key (from Retell dashboard)</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>