force-app/main/default/objects/ARF_Retell_Config__c/fields/From_Number__c.field-meta.xml
<CustomField>
    <fullName>From_Number__c</fullName>
    <description>Retell registered outbound phone number (E.164 format)</description>
    <label>From Phone Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>