force-app/main/default/objects/ARF_Retell_Config__c/fields/Webhook_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Base_URL__c</fullName>
    <description>Base URL for Retell webhook callbacks (your Salesforce Site URL)</description>
    <label>Webhook Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>